<resources>
    <string name="app_name">Ihabit</string>
    <string name="user_icon">user icon</string>
    <string name="habit_page">習慣養成</string>
    <string name="add_habit">新的習慣</string>
    <string name="home">home</string>
    <string name="this_month">本月完成天數</string>
    <string name="combo_day">連續天數</string>
    <string name="day">Day</string>
    <string name="going">項目執行中</string>
    <string name="record">record</string>
    <string name="achievement">achievement</string>
    <string name="enter_account">enter account</string>
    <string name="title_activity_add_habit">addHabitActivity</string>
    <string name="enter_habit">輸入要新增的習慣</string>
    <string name="enter_positive">輸入鼓勵的話</string>
    <string name="enter_start_time">起始時間</string>
    <string name="random">換一句</string>
    <string name="done">完成</string>
    <string name="confirm">確認</string>
    <string name="delete">刪除</string>
    <string name="start_date">開始日期</string>
    <string name="end_date">結束日期</string>
    <string name="positive_word">寫一句鼓勵自己的話</string>
    <string name="frequency">重複時間</string>
    <string name="add">新增</string>
    <string name="forever">永遠</string>
    <string name="weekly">每週</string>
    <string name="open">啟用</string>
    <string name="close">關閉</string>
    <string name="filter">filter</string>
    <string name="time_notion">定時提醒</string>
    <string name="label">標籤</string>
    <string name="all_task">所有任務</string>
    <string name="add_tag">請輸入要新增的標籤(字數建議5個字以內)</string>
    <string name="set_label">請設定標籤</string>
    <string name="remind_time">提醒時間</string>
    <string name="icon_pic">請選擇圖標</string>
    <string name="plus">08:00 </string>
    <string name="test">test </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">update</string>
    <string name="enter_password">enter password</string>
    <string name="login">會員登入</string>
    <string name="new_in">新加入</string>
    <string name="enter_name">enter name</string>
    <string name="enter_email">enter email</string>
    <string name="vaild_email">驗證</string>
    <string name="delete2">刪除</string>
    <string name="swipe_left_delete">左滑刪除</string>
    <string name="mage">魔力</string>
    <string name="str">力量</string>
    <string name="lp">生命值</string>
    <string name="_50">+50</string>
    <string name="_100">+100</string>
    <string name="_200">+200</string>
    <string name="_1600">+1600</string>
    <string name="_400">+400</string>
    <string name="titlehp1">稱號:巨人之驅</string>
    <string name="titlehp0">稱號:血牛是我</string>
    <string name="point">剩餘點數:</string>
    <string name="choice_career">選擇角色職業</string>
    <string name="warrior">戰士</string>
    <string name="warrior_des">剛勇無比的職業，傷害雖然遜於其他兩個職業，但天生血量與防禦素質都非常的高</string>
    <string name="life">生命</string>
    <string name="def">防禦</string>
    <string name="strtitle">力大無窮</string>
    <string name="strtitle2">武學巔峰</string>
    <string name="exp">經驗</string>
    <string name="_20">20</string>
    <string name="_10">10</string>
    <string name="_80">80</string>
    <string name="_40">40</string>
    <string name="_320">320</string>
    <string name="_160">160</string>
    <string name="exptitle">時間管理大師</string>
    <string name="exptitle2">騙吃騙吃</string>
    <string name="money">金錢</string>
    <string name="forge">鍛造</string>
    <string name="upgrade">升級</string>
    <string name="forgeDes">鍛造防禦</string>
    <string name="unknmw">"\?" </string>
    <string name="_2">2</string>
    <string name="change">修改</string>
    <string name="changepassword">修改密碼</string>
    <string name="logout">登出</string>
    <string name="enteroldpassword">請輸入舊密碼</string>
    <string name="enternewpassword">請輸入新密碼</string>
    <string name="ok">確認修改</string>
    <string name="reLog">重新登入</string>
    <string name="enternewpasswordagain">再次輸入新密碼</string>
    <string name="forgetpassword">忘記密碼?</string>
    <string name="test1">\?</string>
    <string name="currentNum1">當前素質</string>
    <string name="currentNum2">素質</string>
    <string name="notask">現在還沒有任何任務</string>
    <string name="add_now">立刻新增</string>
    <string name="item">裝備</string>
    <string name="spent">花費金額</string>
    <string name="gorandom">隨機結果</string>
    <string name="currentlv">當前等級</string>
    <string name="uplv">提升等級</string>
    <string name="mail">信箱</string>

</resources>