<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/inside_task">

    <TextView
        android:id="@+id/thisMonthNum4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/day"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/comboNum"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/comboNum"
        app:layout_constraintTop_toTopOf="@+id/comboNum"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/comboNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/test"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/positiveContent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/positiveContent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/combo_day"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/positiveContent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/positiveContent" />

    <TextView
        android:id="@+id/thisMonthNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="10dp"
        android:text="@string/day"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/thisMonthNum"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toEndOf="@+id/thisMonthNum"
        app:layout_constraintTop_toTopOf="@+id/thisMonthNum" />

    <TextView
        android:id="@+id/positiveContent"
        android:layout_width="370dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/positive_word"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/this_month"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/positiveContent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/positiveContent"
        app:layout_constraintTop_toBottomOf="@+id/positiveContent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:text="@string/going"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/positiveContent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/positiveContent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/since"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/day"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/thisMonthNum4"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/thisMonthNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/test"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView15"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view2"
        android:layout_width="2sp"
        android:layout_height="30dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/thisMonthNum2"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/thisMonthNum2"
        app:layout_constraintVertical_bias="0.571" />

    <View
        android:id="@+id/view3"
        android:layout_width="370dp"
        android:layout_height="3dp"
        android:layout_marginTop="12dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/positiveContent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/positiveContent"
        app:layout_constraintTop_toBottomOf="@+id/thisMonthNum2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="184dp"
        app:layout_constraintGuide_percent="0.55" />

    <ImageView
        android:id="@+id/noti"
        android:layout_width="wrap_content"
        android:background="@color/Theme_Hickory"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/since"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toEndOf="@+id/since"
        app:layout_constraintTop_toTopOf="@+id/since"
        app:srcCompat="@drawable/ic_baseline_notifications_active_24" />

</androidx.constraintlayout.widget.ConstraintLayout>