<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/mainFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/achievement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/achievement"
        android:foregroundGravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="@+id/footer"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/footer"
        app:layout_constraintTop_toTopOf="@+id/footer"
        app:layout_constraintVertical_bias="0.562"
        app:srcCompat="@drawable/medal_f" />

    <ImageView
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/record"
        android:foregroundGravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/footer"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/achievement"
        app:layout_constraintTop_toTopOf="@+id/footer"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@drawable/category_f" />

    <ImageView
        android:id="@+id/homePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/achievement"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/footer"
        app:layout_constraintVertical_bias="0.555"
        app:srcCompat="@drawable/home_f" />

</androidx.constraintlayout.widget.ConstraintLayout>