<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Theme_Twine"
    tools:context=".activity.NewPassWordActivity">


    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enternewpasswordagain"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView84"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/imageView84" />

    <ImageView
        android:id="@+id/imageView84"
        android:layout_width="75dp"
        android:layout_height="61dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView72"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView72"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:srcCompat="@drawable/icon_lock" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enternewpassword"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView72"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/imageView72" />

    <TextView
        android:id="@+id/backLogOut"
        android:layout_width="147dp"
        android:layout_height="55dp"
        android:background="@drawable/done_button"
        android:gravity="center"
        android:text="@string/reLog"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/okUpdate"
        app:layout_constraintStart_toStartOf="@+id/okUpdate"
        app:layout_constraintTop_toBottomOf="@+id/okUpdate" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@color/white"
        app:counterTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/enternewpassword"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:counterTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/enteroldpassword"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/okUpdate"
        android:layout_width="147dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/done_button"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="76dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437"
        app:srcCompat="@drawable/icon_key" />

    <ImageView
        android:id="@+id/imageView72"
        android:layout_width="75dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.368"
        app:srcCompat="@drawable/icon_lock" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enteroldpassword"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:counterTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView84"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterNewPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/enternewpasswordagain"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>