<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Theme_Twine"
    tools:context=".SettingFragment">

    <TextView
        android:id="@+id/logOut"
        android:layout_width="136dp"
        android:layout_height="45dp"
        android:background="@drawable/done_button"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView83"
        app:layout_constraintStart_toStartOf="@+id/imageView83"
        app:layout_constraintTop_toBottomOf="@+id/imageView83" />

    <ImageView
        android:id="@+id/imageView69"
        android:layout_width="181dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline39"
        app:layout_constraintEnd_toEndOf="@+id/userHead"
        app:layout_constraintStart_toStartOf="@+id/userHead"
        app:layout_constraintTop_toBottomOf="@+id/userHead"
        app:srcCompat="@drawable/f3" />

    <ImageView
        android:id="@+id/userHead"
        android:layout_width="186dp"
        android:layout_height="196dp"
        android:src="@drawable/berzerker_head"
        app:layout_constraintBottom_toTopOf="@+id/guideline39"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView69"
        app:layout_constraintEnd_toEndOf="@+id/imageView69"
        app:layout_constraintStart_toStartOf="@+id/imageView69"
        app:layout_constraintTop_toTopOf="@+id/imageView69" />

    <TextView
        android:id="@+id/changeName"
        android:layout_width="57dp"
        android:layout_height="39dp"
        android:background="@drawable/delete_use"
        android:gravity="center"
        android:text="@string/change"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView69"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView69"
        app:layout_constraintTop_toTopOf="@+id/imageView69" />

    <ImageView
        android:id="@+id/imageView78"
        android:layout_width="52dp"
        android:layout_height="54dp"
        android:src="@drawable/icon_key"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView80"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView80"
        app:layout_constraintTop_toBottomOf="@+id/imageView80"
        app:layout_constraintVertical_bias="0.274" />

    <ImageView
        android:id="@+id/imageView80"
        android:layout_width="50dp"
        android:layout_height="46dp"
        android:src="@drawable/icon_message"
        app:layout_constraintBottom_toBottomOf="@+id/imageView81"
        app:layout_constraintEnd_toStartOf="@+id/imageView81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView81" />

    <EditText
        android:id="@+id/playerEditName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView69"
        app:layout_constraintEnd_toEndOf="@+id/imageView69"
        app:layout_constraintStart_toStartOf="@+id/imageView69"
        app:layout_constraintTop_toTopOf="@+id/imageView69" />

    <ImageView
        android:id="@+id/imageView81"
        android:layout_width="288dp"
        android:layout_height="83dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/panel_example1"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintStart_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toTopOf="@+id/guideline39" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView81"
        app:layout_constraintEnd_toEndOf="@+id/imageView81"
        app:layout_constraintStart_toStartOf="@+id/imageView81"
        app:layout_constraintTop_toTopOf="@+id/imageView81" />

    <ImageView
        android:id="@+id/imageView83"
        android:layout_width="286dp"
        android:layout_height="74dp"
        android:src="@drawable/panel_example1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView78"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintStart_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toTopOf="@+id/imageView78" />

    <TextView
        android:id="@+id/changePassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/changepassword"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView83"
        app:layout_constraintEnd_toEndOf="@+id/imageView83"
        app:layout_constraintStart_toStartOf="@+id/imageView83"
        app:layout_constraintTop_toTopOf="@+id/imageView83" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="43dp"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="311dp"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="168dp"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>